# annotation

./: .gitignore  annotate.coffee  annotate.css  server.py  test.coffee  test.css  test.html  test.js
server/: Main.hs  annotate-server.cabal  server.cabal
