name:                annotate-server
version:             0.1.0.0
synopsis:            Annotation server
-- description:         
homepage:            http://www.github.com/bgamari/annotate
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2014 Ben Gamari
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable annotate-server
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.8,
                       time >=1.5 && <1.10,
                       transformers >=0.5 && <0.6,
                       aeson >=0.8 && <1.5,
                       text >=1.2 && <1.3,
                       bytestring >=0.10 && <0.11,
                       scotty >=0.9 && <0.12,
                       wai,
                       wai-extra,
                       http-types >=0.8 && <0.13,
                       directory >=1.2 && <1.4,
                       filepath >=1.3 && <1.5,
                       optparse-applicative >= 0.12,
                       network-uri,
                       blaze-html
  ghc-options:         -threaded
  default-language:    Haskell2010
