name:                server
version:             0.1.0.0
synopsis:            Annotation server
-- description:         
homepage:            http://www.github.com/bgamari/annotate
license:             BSD3
license-file:        LICENSE
author:              Ben Gamari
maintainer:          ben@smart-cactus.org
copyright:           (c) 2014 Ben Gamari
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable server
  main-is:             Main.hs
  other-extensions:    OverloadedStrings
  build-depends:       base >=4.8 && <4.9,
                       time >=1.5 && <1.6,
                       transformers >=0.4 && <0.5,
                       either >=4.3 && <4.4,
                       aeson >=0.8 && <0.9,
                       text >=1.2 && <1.3,
                       bytestring >=0.10 && <0.11,
                       scotty >=0.9 && <0.10,
                       http-types >=0.8 && <0.9,
                       directory >=1.2 && <1.3,
                       filepath >=1.3 && <1.4
  default-language:    Haskell2010
